--- a/src/main/resources/templates/admin/course/add.html
+++ b/src/main/resources/templates/admin/course/add.html
@@ -20,7 +20,7 @@
             border-width: 0;
             background-color: transparent;
             text-decoration: underline;
-            font-size: 12px;
+            font-size: 14px;
             line-height: 20px;
             height: 20px;
             color: #000;
@@ -31,7 +31,9 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script>
         $(document).ready(function () {
-
+            $('#submitForm').on('submit', function () {
+                oEditors.getById["contents"].exec("UPDATE_CONTENTS_FIELD", []);
+            });
         });
     </script>
 </head>
@@ -40,7 +42,7 @@
     <div th:replace="/fragments/layout.html::fragment-admin-body-menu"></div>
 
     <div class="detail">
-        <form method="post">
+        <form id="submitForm" method="post">
             <table>
                 <tbody>
                     <tr>
@@ -75,7 +77,7 @@
                     <tr>
                         <th>내용</th>
                         <td>
-                            <textarea th:text="${detail.contents}" name="contents" required placeholder="내용 입력"></textarea>
+                            <textarea th:text="${detail.contents}" id="contents" name="contents" placeholder="내용 입력"></textarea>
                         </td>
                     </tr>
                     <tr>
@@ -106,5 +108,16 @@
             </div>
         </form>
     </div>
+
+    <script type="text/javascript" src="/res/se2/js/service/HuskyEZCreator.js" charset="utf-8"></script>
+    <script type="text/javascript">
+        var oEditors = [];
+        nhn.husky.EZCreator.createInIFrame({
+            oAppRef: oEditors,
+            elPlaceHolder: "contents",
+            sSkinURI: "/res/se2/SmartEditor2Skin.html",
+            fCreator: "createSEditor2"
+        });
+    </script>
 </body>
 </html>
