project: fastLms. done

--- a/src/main/resources/templates/admin/course/list.html
+++ b/src/main/resources/templates/admin/course/list.html
@@ -118,7 +118,7 @@
                    </p>
                 </td>
                 <td>
-                    <p th:text="${x.regDt}"></p>
+                    <p th:text="${x.regDtText}"></p>
                 </td>
             </tr>
             </tbody>
