--- a/src/main/resources/templates/admin/member/list.html
+++ b/src/main/resources/templates/admin/member/list.html
@@ -62,6 +62,7 @@
                     <th>이메일 인증 여부</th>
                     <th>가입일</th>
                     <th>관리자 여부</th>
+                    <th>마지막 로그인 일자</th>
                 </tr>
             </thead>
             <tbody>
@@ -79,11 +80,12 @@
                         <p th:if="${x.emailAuthYn}">Y</p>
                         <p th:if="${x.emailAuthYn eq false}">N</p>
                     </td>
-                    <td th:text="${x.regDt}"></td>
+                    <td th:text="${x.regDtText}"></td>
                     <td>
                         <p th:if="${x.adminYn}">Y</p>
                         <p th:if="${x.adminYn eq false}">N</p>
                     </td>
+                    <td th:text="${x.loginDtText}"></td>
                 </tr>
             </tbody>
         </table>
